tests/outref/TSCP02_errors.ref
-- TSCP02 : OCTO544 : Assertion failure and Errors when IN is used in SELECT column list
SELECT 1 IN (true) FROM names;
-- TODO: this should give a type error, but currently gives an parse error (#552)
SELECT true IN (1) FROM names;
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left NUMERIC, right BOOLEAN
Error with syntax near (line 1, column 7):

SELECT 1 IN (true) FROM names;
       ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT 1 IN (true) FROM names;
Error with syntax near (line 1, column 13):

SELECT true IN (1) FROM names;
            ^^
syntax error, unexpected IN, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT true IN (1) FROM names;

